2010-07-11  Eli Zaretskii  <eliz@gnu.org>

	* process.c (syms_of_process) <delete-exited-processes>: Define
	even if !subprocesses.
	(delete_exited_processes): Ditto.

	* msdos.c (syms_of_msdos) <delete-exited-processes>: Remove DEFVAR.
	(delete_exited_processes): Don't define.

2010-07-10  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (make_frame): Initialize menu_bar_lines and
	tool_bar_lines members.
	(make_initial_frame, make_terminal_frame): Initialize
	menu_bar_lines using value of menu-bar-mode.

	* msdos.c (IT_set_frame_parameters): Don't set menu-bar-lines.

2010-07-10  Eli Zaretskii  <eliz@gnu.org>

	* process.c: Reshuffle #include's.  Condition some of the global
	and static variables on `subprocesses'.
	(hold_keyboard_input, unhold_keyboard_input, kbd_on_hold_p):
	Leave only one implementation.
	(Fget_buffer_process, Fprocess_inherit_coding_system_flag)
	(kill_buffer_processes, Flist_system_processes)
	(Fprocess_attributes, init_process, syms_of_process): Unify the
	implementations for with subprocesses and without them.

2010-07-09  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (set_frame_menubar): Must realize menubar_widget to get the
	correct size for Motif.
	(free_frame_menubar): Call x_set_window_size to update frame size.

	* xfns.c (x_window): Set borderWidth to 0 for pane and
	EmacsFrame.  Frame size calculation is wrong otherwise.

2010-07-09  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_initialize): Add new argument RAISE_ERROR, which
	allows to suppress errors when polling in Emacs' main loop.
	(Fdbus_init_bus, Fdbus_get_unique_name, Fdbus_call_method)
	(Fdbus_call_method_asynchronously, Fdbus_method_return_internal)
	(Fdbus_method_error_internal, Fdbus_send_signal)
	(xd_get_dispatch_status, xd_read_message, Fdbus_register_signal)
	(Fdbus_register_method): Use it.  (Bug#6579)

2010-07-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* alloc.c: Convert DEFUNs to standard C.
	* buffer.c:
	* bytecode.c:
	* callint.c:
	* callproc.c: